fix spacing

--- a/style.css
+++ b/style.css
@@ -11,18 +11,17 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    justify-content: center;
     gap: 100px;
 }
 
 #input-div {
-    border: 1px solid red;
     height: fit-content;
 }
 
 .input-box {
     width: 600px;
     height: 122px;
-    margin-top: 70px;
     border-radius: 30px;
     padding: 15px;
     font-weight: 500;
@@ -39,7 +38,6 @@
 }
 
 #buttons-div {
-    border: 1px solid red;
     display: flex;
     gap: 45px;
 }
@@ -48,10 +46,17 @@ button {
     color: #121212;
     font-weight: 500;
     font-size: 45px;
+    transition: transform .2s, border-bottom .2s, height .2s;
 }
 
 button:hover {
     opacity: 0.7;
+}
+
+button:active {
+    border-bottom: 4px solid #29377e;
+    height: 96px;
+    transform: translateY(4px)
 }
 
 .calc-btn {
@@ -60,14 +65,7 @@ button:hover {
     height: 100px;
     border-radius: 15px;
     border-bottom: 8px solid #5465BF;
-    cursor: pointer;
-    transition: transform .2s, border-bottom .2s, height .2s;
-}
-
-.calc-btn:active {
-    border-bottom: 4px solid #29377e;
-    height: 96px;
-    transform: translateY(4px)
+    cursor: pointer;   
 }
 
 .copy-btn {
@@ -79,6 +77,7 @@ button:hover {
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    border-bottom: 8px solid #5465BF;
 }
 
 .copy-btn ion-icon {
